Add project details for Microsoft internship

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<title> Loni Tra </title>
+<html>
+  <title> Loni Tra </title>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href ="index.css" rel = "stylesheet">
@@ -33,9 +34,9 @@
             where I have cultivated a strong sense of belonging & support within this big university and built a strong foundation and understanding of my own learning process.
           </p>
           <p class="abme">
-            This spring, I will be joining Microsoft as a Software Engineer intern on the DevDiv team where I will have my first experience dabbling
+            This spring, I will be joining Microsoft as a Software Engineer intern on the WindowsForms team where I will have my first experience dabbling
             in large systems and learning to ship quality code. In the summer I will be returning to Facebook
-            where I will continue to grow as an aspiring software engineer. &#9787;
+            where I will continue to grow as an aspiring software engineer on the Messenger Privacy team. &#9787;
           </p>
         </main>
       </div>
@@ -110,29 +111,53 @@
 
         <br><br><br>
 
-<main class="project">
-  <a href="https://github.com/FBUAndroidTeam/HelpQ" target="_blank">
-    <img src="helpq_logo.png" alt="HelpQ" class="projectpics">
-  </a>
-    <section class =projectdescrip>
-    <h2> HelpQ </h2>
-    <p>
-      HelpQ is an android app I made with my teammates during my Facebook University for
-      Engineering (FBU) internship in the summer of 2019. During the first three weeks
-      of the internship, interns go through a mobile development (either android or iOS) bootcamp with
-      CodePath. During the bootcamp, my teammates
-      (<a href="https://www.linkedin.com/in/cassandra-cabrera-7b7582159/" target="_blank">Cassandra Cabrera</a>
-      &
-      <a ID="resume" href="https://www.linkedin.com/in/julie-kallini-4baa85188/" target="_blank">Julie Kallini</a>)
-      and I were frustrated with the communication system
-      between admininstrators and interns in order to get help. The means of communication was essentially
-      a Google Docs acting as a queue; you could imagine the frustration. We therefore made HelpQ to revamp the
-      CodePath training that FBU Engineering interns experience during the first three weeks of their internships
-      by facilitating smoother communication between interns and administrators.
-    </p>
-    <p class ="projectlink"> <a href="https://github.com/FBUAndroidTeam/HelpQ" target="=_blank">[Click for Project Details]</a> </p>
-  </section>
-</main>
+        <main class="project">
+          <a href="https://github.com/FBUAndroidTeam/HelpQ" target="_blank">
+            <img src="helpq_logo.png" alt="HelpQ" class="projectpics">
+          </a>
+            <section class =projectdescrip>
+            <h2> HelpQ </h2>
+            <p>
+              HelpQ is an android app I made with my teammates during my Facebook University for
+              Engineering (FBU) internship in the summer of 2019. During the first three weeks
+              of the internship, interns go through a mobile development (either android or iOS) bootcamp with
+              CodePath. During the bootcamp, my teammates
+              (<a href="https://www.linkedin.com/in/cassandra-cabrera-7b7582159/" target="_blank">Cassandra Cabrera</a>
+              &
+              <a ID="resume" href="https://www.linkedin.com/in/julie-kallini-4baa85188/" target="_blank">Julie Kallini</a>)
+              and I were frustrated with the communication system
+              between admininstrators and interns in order to get help. The means of communication was essentially
+              a Google Docs acting as a queue; you could imagine the frustration. We therefore made HelpQ to revamp the
+              CodePath training that FBU Engineering interns experience during the first three weeks of their internships
+              by facilitating smoother communication between interns and administrators.
+            </p>
+            <p class ="projectlink"> <a href="https://github.com/FBUAndroidTeam/HelpQ" target="=_blank">[Click for Project Details]</a> </p>
+          </section>
+        </main>
+
+        <br><br><br>
+
+        <main class="project">
+          <a href="https://github.com/dotnet/winforms" target="_blank">
+            <img src="windowsforms.jpg" alt="WindowsForms" class="projectpics">
+          </a>
+            <section class =projectdescrip>
+            <h2> Modernizing the WindowsForms ListView Control </h2>
+            <p>
+              During my internship at Microsoft on the WindowsForms team, I had the pleasure of getting to modernize the
+              ListView control to better match the enhancements provided by
+              <a href="https://docs.microsoft.com/en-us/windows/win32/controls/common-controls-intro" target="_blank">Windows Common Control</a>.
+              <a href="https://docs.microsoft.com/en-us/dotnet/framework/winforms/" target="_blank">WindowsForms</a> is a
+              free and
+              <a href="https://github.com/dotnet/winforms" target="_blank">open-source</a>
+              GUI class library that provides the ability to write rich client applications. Over the
+              span of three months, I was able to ramp up on the new technology, codebase, and C# in order to implement
+              various missing ListViewGroup properties that would ultimately modernize the ListView control.
+            </p>
+            <br><br>
+            <p class ="projectlink"> <a href="winforms.html" target="=_blank">[Click for Project Details]</a> </p>
+          </section>
+        </main>
 
         <br></br>
         <br></br>
@@ -185,16 +210,17 @@
         <main class="techx">
           <h3>Technical Experience:</h3>
           <p class="education">
-            <strong>Software Engineer Intern,</strong> <i> Microsoft </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;April 2020 – Present
+            <strong>Software Engineer Intern,</strong> <i> Microsoft – Remote </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;April 2020 – June 2020
           </p>
           <p class="eduindent">
-            o	Leverage teammates in learning and adapting to team operations and codebase under remote 	circumstances
+            o	Modernized the Windows Forms ListView control to reflect enhancements provided by
+              Windows Common Control by implementing &emsp;&emsp;&emsp;various missing ListViewGroup properties using C#
           </p>
           <p class="eduindent">
-            o Responsible for implementing and shipping new property onto an existing Windows Forms control
+            o Leveraged teammates in learning and adapting to team operations and codebase under remote circumstances
           </p>
           <p class="education">
-            <strong>Facebook University for Engineering Intern,</strong> <i>Facebook</i>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;June 2019 – August 2019
+            <strong>Facebook University for Engineering Intern,</strong> <i>Facebook – Menlo Park, California</i>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;June 2019 – August 2019
           </p>
           <p class="eduindent">
             o	Participated in Android mobile development training building four different apps in three weeks, including apps like Twitter and Instagram
@@ -206,7 +232,7 @@
             o	Designed features and UI flow that would best resolve Facebook University training communication 	issues the app aimed to solve
           </p>
           <p class="education">
-            <strong>Computer Science Summer Institute,</strong> <i> Google </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;July 2017 – August 2017
+            <strong>Computer Science Summer Institute,</strong> <i> Google – Kirkland, Washington</i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;July 2017 – August 2017
           </p>
           <p class="eduindent">
             o	Selected to participate in an intensive programming institute learning web app
