Include generic PR link

--- a/winforms.html
+++ b/winforms.html
@@ -92,7 +92,8 @@
           <p>
             These event handlers were the first generic types to be introduced into the codebase. To remedy the errors,
             I explored the designer side of WinForms, a whole different codebase from runtime, to include code that would properly
-            read and write generic event handlers. The designer now generates the correct code for these event handlers
+            <a href="https://github.com/dotnet/winforms-designer/pull/2015" target="_blank">read and write generic event handlers</a>.
+            The designer now generates the correct code for these event handlers
             to work properly and future event handlers that have a generic type when created through the designer.
             <img src="codegencorrection.png">
           </p>
