--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
             where I have cultivated a strong sense of belonging & support within this big university and built a strong foundation and understanding of my own learning process.
           </p>
           <p class="abme">
-            This spring, I will be joining Microsoft as a Software Engineer intern on the WindowsForms team where I will have my first experience dabbling
-            in large systems and learning to ship quality code. In the summer I will be returning to Facebook
-            where I will continue to grow as an aspiring software engineer on the Messenger Privacy team. &#9787;
+            This spring, I will returning to Microsoft as a Software Engineer intern on the WindowsForms team where I will continue
+            to dabble in large systems, learn to ship quality code, and make an impact. &#9787;
           </p>
         </main>
       </div>
