--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             where I have cultivated a strong sense of belonging & support within this big university and built a strong foundation and understanding of my own learning process.
           </p>
           <p class="abme">
-            This spring, I will returning to Microsoft as a Software Engineer intern on the WindowsForms team where I will continue
+            This spring, I will be returning to Microsoft as a Software Engineer intern on the WindowsForms team where I will continue
             to dabble in large systems, learn to ship quality code, and make an impact. &#9787;
           </p>
         </main>
